switch to virtual threads with semaphore-based DB concurrency control